maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: not found: value ramndom3
      d=ramndom3()
        ^